--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -914,6 +914,132 @@
       "current params: {'objective': 'regression', 'metric': 'mape', 'n_jobs': -1, 'n_estimators': 10, 'random_state': 54321, 'num_leaves': 175, 'learning_rate': 0.03359610253543841, 'min_child_samples': 126, 'feature_fraction': 0.5878350417003538, 'bagging_fraction': 0.7959246302226046, 'n_in': 109, 'n_back': 150}\n",
       "X shape before dropped nans (3647, 11)\n",
       "X shape after dropped nans (3497, 11)\n",
+      "cv shape before dropped nans 719\n",
+      "cv shape after dropped nans 460\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.035491 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 280500\n",
+      "[LightGBM] [Info] Number of data points in the train set: 460, number of used features: 1100\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.035819 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 280500\n",
+      "[LightGBM] [Info] Number of data points in the train set: 460, number of used features: 1100\n",
+      "[LightGBM] [Info] Start training from score 4.316885\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Info] Start training from score 4.316885\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.025578 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 169400\n",
+      "[LightGBM] [Info] Number of data points in the train set: 460, number of used features: 1100\n",
+      "[LightGBM] [Info] Start training from score 4.316885\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[I 2020-11-29 03:10:38,596]\u001b[0m Trial 13 finished with value: 0.08989059704341196 and parameters: {'num_leaves': 175, 'learning_rate': 0.03359610253543841, 'min_child_samples': 126, 'feature_fraction': 0.5878350417003538, 'bagging_fraction': 0.7959246302226046, 'n_in': 109, 'n_back': 150}. Best is trial 13 with value: 0.08989059704341196.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current params: {'objective': 'regression', 'metric': 'mape', 'n_jobs': -1, 'n_estimators': 10, 'random_state': 54321, 'num_leaves': 173, 'learning_rate': 0.029694028932539814, 'min_child_samples': 19, 'feature_fraction': 0.6326828101196891, 'bagging_fraction': 0.7875014048674743, 'n_in': 105, 'n_back': 139}\n",
+      "X shape before dropped nans (3647, 11)\n",
+      "X shape after dropped nans (3508, 11)\n",
+      "cv shape before dropped nans 719\n",
+      "cv shape after dropped nans 475\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.033960 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 270300\n",
+      "[LightGBM] [Info] Number of data points in the train set: 475, number of used features: 1060\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.034328 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 270300\n",
+      "[LightGBM] [Info] Number of data points in the train set: 475, number of used features: 1060\n",
+      "[LightGBM] [Info] Start training from score 4.322505\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Info] Start training from score 4.322505\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.028081 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 168540\n",
+      "[LightGBM] [Info] Number of data points in the train set: 475, number of used features: 1060\n",
+      "[LightGBM] [Info] Start training from score 4.322505\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[I 2020-11-29 03:11:45,142]\u001b[0m Trial 14 finished with value: 0.0887004961574552 and parameters: {'num_leaves': 173, 'learning_rate': 0.029694028932539814, 'min_child_samples': 19, 'feature_fraction': 0.6326828101196891, 'bagging_fraction': 0.7875014048674743, 'n_in': 105, 'n_back': 139}. Best is trial 14 with value: 0.0887004961574552.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No further splits with positive gain, best gain: -inf\n",
+      "current params: {'objective': 'regression', 'metric': 'mape', 'n_jobs': -1, 'n_estimators': 10, 'random_state': 54321, 'num_leaves': 175, 'learning_rate': 0.02993669201799853, 'min_child_samples': 3, 'feature_fraction': 0.62145827617963, 'bagging_fraction': 0.7989190196757939, 'n_in': 108, 'n_back': 150}\n",
+      "X shape before dropped nans (3647, 11)\n",
+      "X shape after dropped nans (3497, 11)\n",
       "cv shape before dropped nans 719\n"
      ]
     }
