--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -1040,6 +1040,132 @@
       "current params: {'objective': 'regression', 'metric': 'mape', 'n_jobs': -1, 'n_estimators': 10, 'random_state': 54321, 'num_leaves': 175, 'learning_rate': 0.02993669201799853, 'min_child_samples': 3, 'feature_fraction': 0.62145827617963, 'bagging_fraction': 0.7989190196757939, 'n_in': 108, 'n_back': 150}\n",
       "X shape before dropped nans (3647, 11)\n",
       "X shape after dropped nans (3497, 11)\n",
+      "cv shape before dropped nans 719\n",
+      "cv shape after dropped nans 461\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.035673 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 277950\n",
+      "[LightGBM] [Info] Number of data points in the train set: 461, number of used features: 1090\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.035755 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 277950\n",
+      "[LightGBM] [Info] Number of data points in the train set: 461, number of used features: 1090\n",
+      "[LightGBM] [Info] Start training from score 4.317324\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Info] Start training from score 4.317324\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.027704 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 167860\n",
+      "[LightGBM] [Info] Number of data points in the train set: 461, number of used features: 1090\n",
+      "[LightGBM] [Info] Start training from score 4.317324\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[I 2020-11-29 03:12:51,331]\u001b[0m Trial 15 finished with value: 0.08807678934129297 and parameters: {'num_leaves': 175, 'learning_rate': 0.02993669201799853, 'min_child_samples': 3, 'feature_fraction': 0.62145827617963, 'bagging_fraction': 0.7989190196757939, 'n_in': 108, 'n_back': 150}. Best is trial 15 with value: 0.08807678934129297.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No further splits with positive gain, best gain: -inf\n",
+      "current params: {'objective': 'regression', 'metric': 'mape', 'n_jobs': -1, 'n_estimators': 10, 'random_state': 54321, 'num_leaves': 173, 'learning_rate': 0.02512160497170542, 'min_child_samples': 16, 'feature_fraction': 0.4737460376185595, 'bagging_fraction': 0.9525040532013646, 'n_in': 103, 'n_back': 150}\n",
+      "X shape before dropped nans (3647, 11)\n",
+      "X shape after dropped nans (3497, 11)\n",
+      "cv shape before dropped nans 719\n",
+      "cv shape after dropped nans 466\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.032032 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 265200\n",
+      "[LightGBM] [Info] Number of data points in the train set: 466, number of used features: 1040\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.032502 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 265200\n",
+      "[LightGBM] [Info] Number of data points in the train set: 466, number of used features: 1040\n",
+      "[LightGBM] [Info] Start training from score 4.319869\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Info] Start training from score 4.319869\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.024610 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 162240\n",
+      "[LightGBM] [Info] Number of data points in the train set: 466, number of used features: 1040\n",
+      "[LightGBM] [Info] Start training from score 4.319869\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
+      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[I 2020-11-29 03:13:54,721]\u001b[0m Trial 16 finished with value: 0.08808529332198481 and parameters: {'num_leaves': 173, 'learning_rate': 0.02512160497170542, 'min_child_samples': 16, 'feature_fraction': 0.4737460376185595, 'bagging_fraction': 0.9525040532013646, 'n_in': 103, 'n_back': 150}. Best is trial 15 with value: 0.08807678934129297.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "current params: {'objective': 'regression', 'metric': 'mape', 'n_jobs': -1, 'n_estimators': 10, 'random_state': 54321, 'num_leaves': 205, 'learning_rate': 0.06213351546211955, 'min_child_samples': 6, 'feature_fraction': 0.417389491706437, 'bagging_fraction': 0.9897757062170663, 'n_in': 119, 'n_back': 150}\n",
+      "X shape before dropped nans (3647, 11)\n",
+      "X shape after dropped nans (3497, 11)\n",
       "cv shape before dropped nans 719\n"
      ]
     }
