Deleted neptune ai auth keys

--- a/test_prediction/test_prediction.ipynb
+++ b/test_prediction/test_prediction.ipynb
@@ -28,12 +28,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Необходимо указать данные для авторизации в neptune проекте"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neptune.init('iliaavilov/SIBUR')"
+    "neptune.init('')"
    ]
   },
   {
@@ -105,7 +112,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Константы"
    ]
@@ -113,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "data_path = 'data/'\n",
@@ -233,7 +244,7 @@
    "outputs": [],
    "source": [
     "LR = SGDRegressor(**params)\n",
-    "LR.fit(X_train[cv[0][0]], y_train[cv[0][0]], sample_weight = 1/y_train[cv[0][0]])\n",
+    "LR.fit(X_train[cv[0][0]], y_train[cv[0][0]])\n",
     "predictions = LR.predict(X_test)"
    ]
   },
@@ -266,7 +277,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Предсказания с помощью lgbm"
    ]
@@ -274,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "all_features = train_features.append(test_features, ignore_index = True)\n",
@@ -287,6 +302,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -302,7 +318,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "X_train = X[:(train_features.shape[0] - max(n_backs))]\n",
@@ -312,7 +330,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "print(y_train.shape)\n",
@@ -324,7 +344,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "params"
@@ -334,6 +356,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -352,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "if os.path.isfile('submission.csv') == True:\n",
@@ -369,19 +394,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "submission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#neptune.project.get_experiments(exp_index)[0].log_metric('leaderboard_mape', 2.4408)"
    ]
   },
   {
@@ -502,17 +520,6 @@
     "    submission['timestamp'] = ts\n",
     "    submission[target] = predictions\n",
     "    submission.to_csv('submission.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "#neptune.project.get_experiments(exp_index)[0].log_metric('leaderboard_mape', 2.8630)"
    ]
   }
  ],
