added model training and submission saving

--- a/Проект.ipynb
+++ b/Проект.ipynb
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -1469,7 +1469,7 @@
     "    LR.fit(X_train[cv[0][0]], y_train[cv[0][0]])\n",
     "    predictions = LR.predict(X_test)\n",
     "\n",
-    "    with open('{}.pickle'.format(target), 'wb') as f:\n",
+    "    with open('models/{}.pickle'.format(target), 'wb') as f:\n",
     "        pickle.dump(LR, f)\n",
     "\n",
     "\n",
